--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${PORT:8080}
-spring.neo4j.uri=${NEO4J_URI:neo4://http://central-dev.neo4j-field.com}
-spring.neo4j.authentication.username=${NEO4J_USER: neo4j}
+spring.neo4j.uri=${NEO4J_URI:bolt://54.68.133.241:7687}
+spring.neo4j.authentication.username=${NEO4J_USER:neo4j}
 spring.neo4j.authentication.password=${NEO4J_PASSWORD:centraldev1100}
 logging.level.org.springframework.data.neo4j.cypher = trace
 
